First round of design fixes

--- a/src/app/components/accordion-group/accordion-group.scss
+++ b/src/app/components/accordion-group/accordion-group.scss
@@ -7,7 +7,7 @@
 
     .accordion-item {
 
-        .control-bar {
+        > .control-bar {
             align-items: baseline;
             background-color: ui-color(white);
             display: flex;
