--- a/src/app/pages/details-new/phone-view/errata-pane/errata-pane.html
+++ b/src/app/pages/details-new/phone-view/errata-pane/errata-pane.html
@@ -8,8 +8,8 @@
     </div>
     <div class="button-group">
         <a href="/errata/?book={encodeURIComponent(model.title)}"
-            class="btn small secondary">Errata list</a>
+            class="btn secondary">Errata list</a>
         <a href="/errata/form?book={encodeURIComponent(model.title)}"
-            class="btn small">Suggest a correction</a>
+            class="btn">Suggest a correction</a>
     </div>
 </template>
