--- a/src/app/components/get-this-title/order-print-copy/order-print-copy.scss
+++ b/src/app/components/get-this-title/order-print-copy/order-print-copy.scss
@@ -71,8 +71,10 @@
         display: grid;
         grid-gap: $normal-margin;
         grid-template-rows: auto auto;
+        justify-items: center;
         line-height: normal;
         padding: 2rem;
+        text-align: center;
         text-decoration: none;
 
         @include wider-than($phone-max) {
