--- a/src/app/pages/details-new/resource-box/resource-box.scss
+++ b/src/app/pages/details-new/resource-box/resource-box.scss
@@ -3,12 +3,20 @@
 .resource-box {
     background-color: ui-color(white);
     border-radius: 0.4rem;
-    box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 4px 0 rgba(0, 0, 0, 0.12), 0 2px 4px 0 rgba(0, 0, 0, 0.14);
+    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.25);
+    color: inherit;
     display: flex;
     flex-direction: column;
     height: 100%;
     justify-content: space-between;
     padding: $normal-margin 1.8rem;
+    text-decoration: none;
+
+    @include wider-than($tablet-max) {
+        &:hover {
+            box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.25);
+        }
+    }
 
     &.double {
         grid-column: span 2;
@@ -20,6 +28,10 @@
         margin: 0;
     }
 
+    .top {
+        color: text-color(normal);
+    }
+
     .bottom {
         align-items: baseline;
         display: flex;
@@ -28,8 +40,11 @@
 
         .left {
             @include set-font(helper-label);
-            color: text-color(helper);
         }
+    }
+
+    @at-root :not(:hover) .bottom .left {
+        color: text-color(helper);
     }
 
     .fa-download {
