--- a/src/app/pages/details-new/instructor-resource-tab/instructor-resource-tab.html
+++ b/src/app/pages/details-new/instructor-resource-tab/instructor-resource-tab.html
@@ -27,6 +27,7 @@
                 </div>
             </div>
             <resource-box each="resource in model.resources" skip="true"></resource-box>
+            <request-comp-copy skip="true"></request-comp-copy>
         </div>
     </div>
     <a href="/blog/upcoming-openstax-webinars" class="webinars">
