--- a/src/app/components/dialog/dialog.html
+++ b/src/app/components/dialog/dialog.html
@@ -1,6 +1,7 @@
 <template args="model">
     <div class="title-bar">
-        <span id="dialog-title">{model.title}</span>
+        <span id="dialog-title" class="text-title">{model.title}</span>
+        <span if="model.htmlTitle" class="html-title" skip="true"></span>
         <span class="put-away fa fa-times" role="button"></span>
     </div>
     <div class="main-region"></div>
