--- a/src/app/pages/blog/article/formatted-as/feature.html
+++ b/src/app/pages/blog/article/formatted-as/feature.html
@@ -2,7 +2,7 @@
     <div class="hero" style="{backgroundImage: `url(${model.coverUrl})`}">
         <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
     </div>
-    <article class="boxed">
+    <article>
         <h1>{model.title}</h1>
         <h2 if="model.subheading">{model.subheading}</h2>
         <div class="meta">
