Implement TodoMVC as a-example

--- a/src/app/pages/a-page-template/a-page-template.scss
+++ b/src/app/pages/a-page-template/a-page-template.scss
@@ -1,6 +1,6 @@
 @import 'pattern-library/core/pattern-library/headers';
 
-.a-component-template {
+.a-page-template {
     h1 {
         color: os-color(red);
     }
