Fix mobile dialog styling Second pass fixes Refactoring for clarity Rework modal dialog so there is only one instance

--- a/src/app/components/form-input/form-input.html
+++ b/src/app/components/form-input/form-input.html
@@ -6,7 +6,7 @@
          pattern="{model.pattern}" min="{model.min}" max="{model.max}"
          placeholder="{model.placeholder}"
          required="{model.required ? '' : null}"
-         autocomplete="{model.matches ? 'off' : 'on'}"
+         autocomplete="{model.autocomplete || (model.matches ? 'off' : 'on')}"
         >
         <div class="invalid-message">{model.validationMessage(model.name)}</div>
         <div if="model.matches" class="suggestions">
