--- a/src/app/components/popup/popup.html
+++ b/src/app/components/popup/popup.html
@@ -1,5 +1,5 @@
 <template args="model">
-    <div class="overlay" if="model.show">
+    <div class="overlay">
         <div role="dialog" aria-describedby="popupMessage">
             <p id="popupMessage">{model.message}</p>
             <button class="dismiss" tabindex="1">Got it</button>
