--- a/src/app/pages/details-new/details.html
+++ b/src/app/pages/details-new/details.html
@@ -4,11 +4,13 @@
             <h1>{model.bookTitle}</h1>
         </div>
     </div>
-    <div class="content {model.detailsTabClass || ''}">
-        <div class="phone-view" skip="true"></div>
-        <div class="bigger-view">
-            <div class="tab-controller" skip="true"></div>
-            <div class="tab-content" skip="true"></div>
+    <div class="content-wrapper">
+        <div class="content">
+            <div class="phone-view" skip="true"></div>
+            <div class="bigger-view">
+                <div class="tab-controller" skip="true"></div>
+                <div class="tab-content" skip="true"></div>
+            </div>
         </div>
     </div>
 </template>
