--- a/src/app/pages/details-new/instructor-resource-tab/instructor-resource-tab.scss
+++ b/src/app/pages/details-new/instructor-resource-tab/instructor-resource-tab.scss
@@ -23,6 +23,8 @@ $icon-size: 6rem;
     }
 
     .blurb-body {
+        @include set-font(body-large);
+
         max-width: $text-content-max;
     }
 
@@ -31,8 +33,8 @@ $icon-size: 6rem;
         display: grid;
         grid-gap: 1rem;
         grid-template-columns: auto 1fr;
+        text-decoration: none;
 
-        // TODO Use book color
         .icon-cell {
             align-items: center;
             border-radius: 50%;
@@ -46,15 +48,9 @@ $icon-size: 6rem;
         h2 {
             @include set-font(h4);
         }
-
-        .blurb {
-            @include set-font(body-large);
-        }
     }
 
     .ally-blurb {
-        @include set-font(body-large);
-
         align-items: flex-start;
         display: grid;
         font-weight: inherit;
@@ -77,16 +73,21 @@ $icon-size: 6rem;
     }
 
     .ally-box {
-        color: inherit;
         padding: 0;
         text-decoration: none;
 
+        &:not(:hover) {
+            color: inherit;
+        }
+
         .top {
-            align-items: baseline;
+            align-items: center;
             display: flex;
+            height: 100%;
             justify-content: center;
             padding: 4rem 0;
             position: relative;
+            width: 100%;
 
             @include wider-than($tablet-max) {
                 &:hover {
