--- a/src/app/pages/errata/form/form.scss
+++ b/src/app/pages/errata/form/form.scss
@@ -52,6 +52,11 @@
         }
     }
 
+    .other-group .invalid-message {
+        display: grid;
+        text-indent: 1rem;
+    }
+
     .radio-columns {
         [type="text"] {
             width: auto;
