Add alt/descriptive text to cc license image and how-we spend-$10 image

--- a/src/app/pages/details/details-loaded-polish.html
+++ b/src/app/pages/details/details-loaded-polish.html
@@ -205,7 +205,7 @@
                     <th>Licencja</th>
                     <td class="license">
                         <div>
-                            <img src="{model.licenseIcon}" alt="">
+                            <img src="{model.licenseIcon}" alt="{model.licenseAlt}">
                             <div>
                                 <div if="!model.license_text">
                                     Podręcznik Fizyka dla szkół wyższych został
