--- a/src/app/pages/details/details-loaded.html
+++ b/src/app/pages/details/details-loaded.html
@@ -206,7 +206,7 @@
                     <th>License</th>
                     <td class="license">
                         <div>
-                            <img src="{model.licenseIcon}" alt="">
+                            <img src="{model.licenseIcon}" alt="{model.licenseAlt}">
                             <div>
                                 <div if="!model.license_text">
                                     <span data-html="title" skip="true"></span> by OpenStax is licensed under
