--- a/src/app/components/get-this-title/order-print-copy/order-print-copy.scss
+++ b/src/app/components/get-this-title/order-print-copy/order-print-copy.scss
@@ -76,6 +76,7 @@
         text-decoration: none;
 
         @include wider-than($phone-max) {
+            grid-template-rows: 3rem 2fr auto 1fr;
             justify-items: center;
             padding: 3rem;
             text-align: center;
