changes for root

--- a/src/app/components/shell/sticky-note/sticky-note.html
+++ b/src/app/components/shell/sticky-note/sticky-note.html
@@ -7,10 +7,10 @@
             </div>
             <div class="multi-button">
                 <button each="lv in [10, 25, 50]"
-                    class="btn inverted" href="/give" tabindex="1" data-amount="{lv}">
+                    class="btn inverted" href="/give" data-amount="{lv}">
                     Give ${lv}
                 </button>
-                <button class="btn inverted" href="/give" tabindex="1" data-amount="?">
+                <button class="btn inverted" href="/give" data-amount="?">
                     Give Other Amount
                 </button>
             </div>
