--- a/src/app/pages/impact/impact.html
+++ b/src/app/pages/impact/impact.html
@@ -1,5 +1,5 @@
 <template args="model">
-    <main id="maincontent">
+    <div id="maincontent">
         <div class="hero w-cards">
             <div class="square-1"></div>
             <div class="square-2"></div>
@@ -39,5 +39,5 @@
                 </a>
             </div>
         </div>
-    </main>
+    </div>
 </template>
