--- a/src/app/pages/tos/tos.html
+++ b/src/app/pages/tos/tos.html
@@ -1,10 +1,10 @@
 <template args="model">
     <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
-    <main id="maincontent" class="text-content left-justified">
+    <div id="maincontent" class="text-content left-justified">
         <h1>{model.intro_heading}</h1>
 
         <div class="plain">
             <p class="text" data-html="terms_of_service_content" skip="true"></p>
         </div>
-    </main>
+    </div>
 </template>
