--- a/src/app/components/shell/header/upper-menu/upper-menu.html
+++ b/src/app/components/shell/header/upper-menu/upper-menu.html
@@ -7,7 +7,7 @@
         <li class="nav-menu-item"><a href="https://openstax.secure.force.com/help" role="menuitem">Help</a></li>
     </ul>
     <span class="logo-wrapper">
-        <a class="logo rice-logo" href="http://www.rice.edu" role="menuitem">
+        <a class="logo rice-logo" href="http://www.rice.edu">
             <img src="/images/rice.png" alt="Rice University logo" height="30">
         </a>
     </span>
