--- a/src/app/pages/contact/contact.html
+++ b/src/app/pages/contact/contact.html
@@ -1,5 +1,5 @@
 <template args="model">
-    <main id="maincontent">
+    <div id="maincontent">
         <div class="hero">
             <div class="boxed">
                 <h1>{model.title}</h1>
@@ -46,5 +46,5 @@
                 <div data-html="customer_service" skip="true"></div>
             </div>
         </div>
-    </main>
+    </div>
 </template>
