a space messes up the ID so use aria-label instead of aria-describedby

--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -24,7 +24,7 @@
             <div class="headshots">
                 <div each="member in group.members" class="headshot{model.tapped === member.id ? ' tapped' : ''}{member.hidden ? ' hidden' : ''}" data-id="{member.id}">
                     <div class="picture-area{' text-'+member.textColor+' bg-'+member.bgColor}{member.image ? ' has-picture' : ''}"
-                     aria-describedby="{member.name}">
+                     aria-label="{member.name}">
                         <img if="member.image" src="{member.image}" alt="photo of {member.name}">
                         <div class="name">{member.name}</div>
                     </div>
