--- a/src/app/components/select/select.html
+++ b/src/app/components/select/select.html
@@ -4,7 +4,7 @@
             <if condition="model.selected.size">
                 <li each="tag in model.selected">
                     <span class="label" data-value="{$item}">{$value}</span>
-                    <span class="remover" aria-role="button" tabindex="0">×</span>
+                    <span class="remover" role="button" tabindex="0">×</span>
                 </li>
             <else>
                 <li>
