--- a/src/app/pages/details/details-loaded.html
+++ b/src/app/pages/details/details-loaded.html
@@ -5,7 +5,7 @@
                 <h1 class="title" data-html="title" skip="true"></h1>
                 <div class="tabs">
                     <if condition="model.table_of_contents">
-                        <a class="table-of-contents-link" class="tab" aria-role="button"
+                        <a class="table-of-contents-link" class="tab" role="button"
                         tabindex="0"><span>Table of Contents</span></a>
                         <div class="table-of-contents {model.tocIsOpen ? '' : 'hidden'}">
                             <div class="box mac-scroll">
