--- a/src/app/pages/technology/technology.html
+++ b/src/app/pages/technology/technology.html
@@ -39,7 +39,7 @@
             <div class="boxed">
                 <div class="header">
                     <h1>{model.tutor.headline}</h1>
-                    <img src="/images/openstax-tutor/tutor-logo.svg">
+                    <img src="/images/openstax-tutor/tutor-logo.svg" alt="OpenStax Tutor beta logo">
                 </div>
             </div>
             <div class="boxed tall-relative">
