--- a/src/app/components/get-this-title/get-this-title-polish.html
+++ b/src/app/components/get-this-title/get-this-title-polish.html
@@ -13,7 +13,7 @@
                 <else>
                     <p>Wersja w niskiej rozdzielczości jest niedostępna</p>
                 </if>
-                <div class="remover" aria-role="button"><i class="fa fa-times" aria-hidden="true"
+                <div class="remover" role="button"><i class="fa fa-times" aria-hidden="true"
                     tabindex="{model.submenu === 'pdf' ? 0 : -1}"></i></div>
             </div>
             <div class="print-submenu">
@@ -41,7 +41,7 @@
                     <img class="coming-soon" src="/images/subjects/coming-soon.svg" alt="coming soon">
                     KUP DLA SIEBIE
                 </div>
-                <div class="remover" aria-role="button"
+                <div class="remover" role="button"
                     tabindex="{model.submenu === 'print' ? 0 : -1}"><i class="fa fa-times" aria-hidden="true"></i></div>
             </div>
         </div>
