--- a/src/app/components/shell/header/main-menu/dropdown/dropdown.html
+++ b/src/app/components/shell/header/main-menu/dropdown/dropdown.html
@@ -20,7 +20,7 @@
                 <div if="item.trainingWheel" class="training-wheel">
                     <div class="put-away-row" tabindex="-1"><button class="put-away"
                     tabindex="0" data-keep-open="true">×</button></div>
-                    <img src="/images/openstax-tutor/tutor-logo.svg">
+                    <img src="/images/openstax-tutor/tutor-logo.svg" alt="OpenStax Tutor beta logo">
                     <hr>
                     <div class="message">You can access your OpenStax Tutor courses here!</div>
                     <div class="button-row" tabindex="-1"><button tabindex="0"
