--- a/src/app/pages/impact/impact.html
+++ b/src/app/pages/impact/impact.html
@@ -14,7 +14,7 @@
             </div>
         </div>
         <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
-        <span class="scrolldown-chevron"><a href="#affiliates"><i class="fa fa-chevron-down"></i></a></span>
+        <span class="scrolldown-chevron"><a href="#affiliates" aria-label="affiliates"><i class="fa fa-chevron-down"></i></a></span>
 
         <div id="affiliates" class="affiliates">
             <div class="text-content" each="item in model.row_1">
