--- a/src/app/pages/openstax-tutor/openstax-tutor.html
+++ b/src/app/pages/openstax-tutor/openstax-tutor.html
@@ -118,8 +118,8 @@
                     <div class="box">
                         <h2>{model.comingSoon.headline}</h2>
                         <div class="future-text" data-html="comingSoon.description" skip="true"></div>
-                        <img class="stamp" src="/images/openstax-tutor/icon-megaphone.svg">
-                        <img class="bottom-edge" src="/images/openstax-tutor/cs-background.svg">
+                        <img class="stamp" src="/images/openstax-tutor/icon-megaphone.svg" alt="">
+                        <img class="bottom-edge" src="/images/openstax-tutor/cs-background.svg" alt="">
                         <div class="gradient-strip"></div>
                     </div>
                 </div>
@@ -178,7 +178,7 @@
             </div>
             <div class="questions text-content">
                 <div each="item in model.faq.items" class="smaller qna">
-                    <div class="toggled-item" aria-role="button" data-index="{$item}">
+                    <div class="toggled-item" role="button" data-index="{$item}">
                         <div class="question" data-html="faq.items[{$item}].question" skip="true"></div>
                         <div class="toggler{item.isOpen ? ' open' : ''}">
                             <i class="fa {item.isOpen ? 'fa-chevron-up' : 'fa-chevron-down'}"></i>
